--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/tabsheet.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/tabsheet.scss
@@ -61,6 +61,7 @@
 .v-shell-tabsheet-tab-wrapper {
 	height: 100%;
 	width: 100%;
+    position: relative;
 }
 
 /* tabs */
